<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessNumberActivity"
    android:weightSum="20"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/guess_info"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:fontFamily="monospace"
        android:layout_margin="5dp"
        android:text="i"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/guessNumTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textAlignment="center"
        android:text="@string/guess_number_text"
        android:textColor="@color/darker_blue"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:hint="@string/insert_number"
        android:inputType="number" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnGuess"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/guess_text"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/remainGuess"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:text="@string/remain_guess"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/resetText" />

</LinearLayout>