<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:weightSum="18"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text=""
        android:textColor="@color/darker_blue"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="5">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="21">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/name_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:inputType="text"
                android:hint="@string/name"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/password_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/confirm_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:hint="@string/confirm_password_hint"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.5"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="Sign Up"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>