<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:weightSum="20"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/typingTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text=""
        android:textColor="@color/darker_blue"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="horizontal"
        android:weightSum="5">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="12">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_margin="15dp"
                android:text="login"/>

            <TextView
                android:id="@+id/btn_login_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:text="@string/login_to_signup"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>